# open-cinema-index

./: .gitignore  DEVELOPMENT.md  LICENSE.md  README.md  TODO.md  alembic.ini  pyproject.toml
.github/workflows/: lint.yml  pytest.yml
docs/: cli.md  data-sources.md  film-schema.md
migrations/: env.py
migrations/versions/: 2a3e579f9916_initial_film_schema.py  3a75613abb89_add_retry_config_to_data_source_rate_.py  599266985308_initial_film_schema.py  5a94c6334a35_add_supports_etags_to_data_source_.py  8e53bbbd6b84_populate_default_retry_config_values.py  980d5659e4cd_add_payload_mapping_to_data_source_.py  b92f2865ef96_add_default_data_sources_with_configs.py  d8a0021645a7_add_endpoint_path_to_data_source_.py
src/open_cinema_index/: cli.py  models.py
src/open_cinema_index/services/: data_sources.py
tests/: test_data_source_service.py  test_models.py
