[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "open-cinema-index"
version = "0.1.0"
description = "A movie index database"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic",
    "sqlalchemy",
    "typer",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
oci = "open_cinema_index.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "ARG"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["open_cinema_index"]
